css/style.css
body{
    font-family: Lato;
    font-size: 16px;
    background: none !important;
    color: #353535;
    margin: 0;
}

text {
    font-family: Lato;
}

.container {
    max-width: 960px;
    width: 100%;
}

.main {
    display: inline-block;
}

.hidden {
    display: none;
    /*height: 0;*/
}

.notSelected {
    opacity: 0.5;
}

h1 {
    font-weight: normal;
    font-size: 30px;
    color: #000;
}

h2 {
    color: #000;
    font-weight: bold;
    font-size: 18px;
    margin: 0 0 25px 0;
}

h3.categoryLabel {
    font-size: 14px;
    text-transform: uppercase;
    font-weight: bold;
    line-height: 21px;
    color: #000;
    display: inline;
    /*margin-top: 0;*/
}

h3.filterTitle {
    display: none;
}

h4 {
    font-weight: bold;
    font-size: 18px;
}

a {
  cursor: pointer;
}

hr {
    margin: 30px 0;
    border: 0.5px solid #d2d2d2;
}

section.userSelections {
    width: 222px;
    margin-right: 30px;
    float: left;
}

section.chart {
    float: left;
}

path.buprenorphine {
    fill: #1696d2;
}

path.buprenorphine_brand {
    fill: #46abdb;
}

path.buprenorphine_generic {
    fill: #a2d4ec;
}

path.naloxone {
    fill: #fdbf11;
}

path.naloxone_brand {
    fill: #fdd870;
}

path.naloxone_generic {
    fill: #fce39e;
}

path.naltrexone {
    fill: #000;
}

path.naltrexone_brand {
    fill: #696969;
}

path.naltrexone_generic {
    fill: #9d9d9d;
}

.filterBtn {
    width: 87px;
    height: 50px;
    background-color: #000;
    color: #fff;
    font-size: 16px;
    font-weight: bold;
    text-transform: uppercase;
    text-align: center;
    position: absolute;
    top: 0;
    right: 0;
    display: none;
    cursor: pointer;
}

.closeBtnDiv {
    display: inline-block;
    height: 24px;
    width: 24px;
    position: absolute;
    top: 31px;
    right: 24px;
}

.closeBtn {
    display: block;
    margin-left: auto;
    right: 0;
    font-size: 20px;
    cursor: pointer;
    margin-bottom: 40px;
    border: none;
    background: none;
}

.closeBtn img {
    width: 24px;
    height: 24px;
}

@media screen and (min-width: 770px) {
    .closeBtnDiv {
        display: none;
    }
}

@media screen and (max-width: 769px) {
    section.userSelections {
        width: 100%;
        /*min-height: 100%;*/
        position: absolute;
        top: -1000px;
        left: 0;
        z-index: 100;
        background-color: #f5f5f5;
        /*overflow-y: scroll;*/
        box-sizing: border-box;
        padding: 40px;
        /*opacity: 0;*/
        transition: 0.6s ease-in-out;
    }

    section.userSelections.slideIn {
        top: 0px;
    }

    h3.filterTitle {
        display: block;
        color: #000;
        font-size: 22px;
        line-height: 32px;
        font-weight: bold;
        text-align: center;
        text-transform: uppercase;
        margin-bottom: 60px;
    }

    section.chart {
        width: 100%;
    }

    .filterBtn {
        display: block;
    }
}

@media screen and (max-width: 400px) {
    .filterBtn {
        height: 40px;
        /*width: 60px;*/
    }
}

.menuHeader {
    width: 100%;
    position: relative;
    height: 24px;
    cursor: pointer;
}

.arrowImage {
    position: absolute;
    right: 0;
    top: 6px;
    transition: 0.4s ease-in-out;
    transform: rotate(180deg);
}

.arrowImage.rotate180 {
    transform: rotate(0deg);
}

.selectionDiv {
    width: 100%;
    overflow: hidden;
}

.selection {
    width: 100%;
}

input,
label {
    cursor: pointer;
}

input:disabled {
    cursor: auto;
}

label + input:checked {
    color: #1696d2;
}

ul {
    list-style-type: none;
}

ul.outerList {
    padding-left: 0;
}

ul.innerList {
    padding-left: 20px;
}

li {
    margin: 2px 0;
}

label[for="perCapita"] {
    font-style: italic;
    margin-top: 16px;
}

.disabled {
    cursor: none;
    pointer-events: none;
    opacity: 0.5;
}

.brandGenericLabel {
    margin-top: 30px;
}

#brandGenericToggle {
    display: inline-block;
    margin-top: 10px;
    /*top: -9px;*/
    /*position: relative;*/
}

.toggle {
    background-image: url(../img/on-off.png);
    background-repeat: no-repeat;
    width: 63px;
    height: 26px;
    border-radius: 20px;
    background-size: cover;
    cursor: pointer;
    transition: background-position .1s ease-in;
}

/*label[for="brandGenericToggle"] {
    display: inline-block;
    position: relative;
    top: -8px;
    margin-left: 5px;
}*/

.toggle.on {
    background-position: -35px 0px;
    background-color: #1696d2;
}

.toggle.on:hover {
    background-color: #12719e !important;
}

.toggle.off {
    background-position: 2px 0px;
    background-color: #696969;
}

.toggle.off:hover {
    background-color: #333 !important;
}

.selected {
    color: #1696d2;
}

.axis--y path {
    stroke: none;
}

.axis--y .tick line {
    stroke: #dedddd;
}

.tick text {
    font-size: 12px;
}

.yaxisLabel {
    font-size: 12px;
    font-style: italic;
}

.chartLegend {
    /*float: left;*/
    /*padding: 5px 0px 10px 20px;*/
    /*width: 370px;*/
    margin-bottom: 20px;
}

.legendGroup {
    width: 130px;
    display: inline-block;
}

.allDrugs .legendGroup.naloxone {
    width: 100px;
}

.legendRow {
    width: 100%;
    /*float: left;*/
    display: inline-block;
    padding-bottom: 0px;
}

.legendText {
    font-family: Lato;
    font-size: 13px;
    float: left;
    display: inline-block;
    /*width: calc(100% - 20px);*/
}

.legendSquare {
    /*display: inline-block;*/
    height: 0;
    width: 0;
    margin: 3px 5px 0px 0px;
    float: left;
}

.brandGeneric .legendSquare {
    margin-left: 10px;
}

@media screen and (max-width: 769px) {
    .chartLegend {
        width: 100%;
    }
}

@media screen and (max-width: 396px) {
    .legendGroup {
        margin-top: 10px;
    }
}

p.notes {
    font-size: 12px;
}

/*.dropdownSection {
    display: inline-block;
    width: 100%;
}

.dropdownSection label {
    display: inline-block;
    width: 100%;
    margin-bottom: 10px;
}*/

/***** Style Filters *****/
/* reference: https://stackoverflow.com/questions/1895476/how-to-style-a-select-dropdown-with-css-only-without-javascript */
#stateDropdown-button {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;   /* remove default arrow */
    width: 216px;
    height: 42px;
    /*background: #ffffff;*/
    border: 1px solid #d2d2d2;
    border-radius: 0;
    font-family: Lato;
    cursor: pointer;
    background: url("../img/arrow_blue.png") 96% / 15% no-repeat #ffffff;
    background-size: auto;
    margin-top: 16px;
    margin-left: 1.6px;
}

/*select::-ms-expand {
    display: none;
}
*/
/* https://stackoverflow.com/questions/17553300/change-ie-background-color-on-unopened-focused-select-box */
/*
select:focus::-ms-value {
    color: #1696d2;
    background: none;
}

option {
    background: #ffffff;
}*/

/* https://stackoverflow.com/questions/13694271/modify-select-so-only-the-first-one-is-gray */
select:invalid,
select option[value=""] {
    color: #353535;
}

.ui-selectmenu-text {
    font-size: 14px;
    /*font-weight: bold;*/
    color: #000;
}

/* Styles for flat radio buttons and checkboxes*/
/* Source: https://www.w3schools.com/howto/howto_css_custom_checkbox.asp */
.btnContainer {
    display: block;
    position: relative;
    padding-left: 23px;
    margin-bottom: 10px;
    line-height: 16px;
    cursor: pointer;
    user-select: none;
}

.btnContainer input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
}

.flatCheckbox {
    position: absolute;
    top: 0;
    left: 0;
    height: 14px;
    width: 14px;
    border: 1px solid #d2d2d2;
}

.flatCheckbox:after {
    content: "";
    position: absolute;
    display: none;
}

.btnContainer input:checked ~ .flatCheckbox:after {
    display: block;
}

.btnContainer .flatCheckbox:after {
    left: 4px;
    top: 0px;
    width: 4px;
    height: 9px;
    border: solid #fff;
    border-width: 0 3px 3px 0;
    transform: rotate(45deg);
}

.btnContainer input:checked ~ .flatCheckbox {
    background-color: #1696d2;
    border: 1px solid #1696d2;
}

.flatRadioBtn {
    position: absolute;
    top: 0;
    left: 0;
    height: 14px;
    width: 14px;
    border: 1px solid #d2d2d2;
    border-radius: 50%;
}

.btnContainer input:checked ~ .flatRadioBtn {
    background-color: #1696d2;
    border: 1px solid #1696d2;
}
/******************************************/

